--- a/login/src/index.css
+++ b/login/src/index.css
@@ -10,3 +10,8 @@
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
   font-size: 24px;
 }
+
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
